--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,5 @@
 /*  */
 figure img {
-    /* border-radius: 50%; 
-    width: 150px;
-    height: 150px; 
-    margin: 0 auto;
-    padding: 20px; */
-
     width: 150px;
     border: 2px solid #ffffff;
     border-radius: 50%;
@@ -33,12 +27,11 @@ figure{
     padding: 20px;
 }
 
-h1, h2, p{
-    margin: 10px;
-    text-align: center;
+h1, h2, p, ul, li, a:-webkit-any-link {
+    margin: 0;
+    padding: 0;
     list-style: none;
-    padding-left: 10px;
-
+    color: unset;
 }
 
 section {
@@ -54,27 +47,30 @@ h1{
     font-family: 'Nunito Sans', sans-serif;
     font-size: 30px;
     color: #5E2129; */
-    margin-top: 0;
+    /* margin-top: 0;
     font-style: italic;
     font-size: 18px;
     color: #494949;
     font-weight:100;
-    letter-spacing: -1px;
+    letter-spacing: -1px; */
+    margin-bottom: 10px;
 
 }
 p{
-    text-align: center;
+    text-align: justify;
+    margin-bottom: 10px;
 }
 .card {
-   border: 1px solid #bdc1ca;
-   border-radius: 6px;
+   border: 1px solid #C0CDD3;
+   box-shadow: 5px 10px 2px 5px rgb(20, 117, 162);
+   border-radius: 8px;
    padding: 20px;
 }
 .card-container {
     display: flex;
     grid-gap: 10px;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 .mdi {
     font-size: 30px;
@@ -85,11 +81,9 @@ p{
     margin-right:20px;
 }
 
-@media (max-width) {
-    .card-container {
-        background-color: aqua;
-        flex-wrap: wrap;
+@media (max-width: 860px) {
+    main {
+        width: 5;
     }
-
 }
 
