--- a/style2.css
+++ b/style2.css
@@ -15,6 +15,10 @@ body{
   
     
 }
+
+.redes_socias{
+    text-align: center;
+}
 main{
     width: 60vw;
     margin: 0 auto;
@@ -32,6 +36,7 @@ h1, h2, p, ul, li, a:-webkit-any-link {
     padding: 0;
     list-style: none;
     color: unset;
+    text-align: center;
 }
 
 section {
